--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,16 @@
  			<groupId>org.springframework.boot</groupId>
  				<artifactId>spring-boot-devtools</artifactId>
 		</dependency> 
+		
+		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+		<dependency>
+    		<groupId>javax.validation</groupId>
+    		<artifactId>validation-api</artifactId>
+		</dependency>
+
 	</dependencies>
+	
+	
 
 	<build>
 		<plugins>
