--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,14 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.1.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
+	
 	<groupId>com.mccommerce</groupId>
 	<artifactId>mccommerce</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -89,12 +91,8 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.Apache.maven.plugins</groupId>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<release>9.0.4</release>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
