--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.1.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	
+
 	<groupId>com.mccommerce</groupId>
 	<artifactId>mccommerce</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -19,6 +19,7 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<start-class>com.farley.mccommerce.Application</start-class>
 	</properties>
 
 	<dependencies>
@@ -93,6 +94,18 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>br.com.curso.mc.Application</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
