--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<start-class>com.farley.mccommerce.Application</start-class>
+		<start-class>com.farley.mccommerce</start-class>
 	</properties>
 
 	<dependencies>
