--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
 				<configuration>
 					<source>11</source>
 					<target>11</target>
@@ -104,7 +103,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<mainClass>br.com.curso.mc.Application</mainClass>
+					<mainClass>com.farley.mccommerce</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
