--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
 			<version>2.2.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.8.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
