Modificação no arquivo application-prod

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://b178c45ad48593:0f0c19b5@us-cdbr-east-02.cleardb.com/heroku_066689fd2a83028?reconnect=true
+spring.datasource.url=mysql://b178c45ad48593:0f0c19b5@us-cdbr-east-02.cleardb.com/heroku_066689fd2a83028?reconnect=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
